# DTSYS

./: .env.example  .gitignore  CHANGELOG.md  Makefile  Readme.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
server/: Dockerfile  alembic.ini  pyproject.toml
server/app/: cli.py  config.py  dependencies.py  main.py  version.py
server/app/api/v1/: activity_stream.py  admin.py  agent.py  agent_download.py  alerts.py  audit.py  auth.py  commands.py  (+21 more)
server/app/core/: exceptions.py  logging.py  rate_limit.py  redis.py  security.py
server/app/db/: session.py
server/app/models/: __init__.py  alert.py  audit_log.py  command.py  compliance.py  device.py  device_config.py  device_group.py  event.py  metrics.py  network.py  notification_rule.py  organization.py  push_token.py  saved_command.py  scheduled_command.py  software.py  ssh_key.py  uptime_event.py  user.py
server/app/services/: activity_stream.py  alert_service.py  audit_service.py  auth_service.py  command_service.py  compliance_service.py  device_service.py  email_service.py  event_stream.py  notification_service.py
server/app/tasks/: alert_tasks.py  celery_app.py  cleanup_tasks.py  email_tasks.py  notification_tasks.py  scheduler_tasks.py
server/app/websocket/: handler.py  manager.py  messages.py  router.py
server/tests/: conftest.py
server/tests/test_api/: test_alerts.py  test_auth.py  test_commands.py  test_devices.py  test_user_management.py
server/tests/test_integration/: test_agent_flow.py
server/tests/test_services/: test_alert_service.py  test_command_service.py
(+166 files in other folders)
